# TLOmodel

./: .buildinfo  .buildinfo.bak  .bumpversion.cfg  .coveragerc  .gitattributes  .gitignore  .travis.yml  ASFR_2020_2070_4.csv  CITATION.cff  GBD_and_model_Deaths.csv  LICENSE.txt  MANIFEST.in  README.md  README.rst  ResourceFile_Depression_nov19.xlsx  ResourceFile_Lifestyle_Enhanced.xlsx  ResourceFile_Oesophageal_Cancer_mar20_ap.xlsx  ResourceFile_Prostate_Cancer.xlsx  _data_sources.html  _hsi_events.html  aims.html  authors.html  azure_batch.html  background.html  condition_combos.csv  contributing.html  contributors.html  contributors.yaml  dalys_averted_summary_2024_2040.xlsx  data_collection.html  data_sources.html  dependencies.py  flows_output.xlsx  genindex.html  getting_started.html  hsi_events.html  ibm_course.html  index.html  initial_running.patch  installation.html  (+38 more)
.ci/: README.md  agent_startup.conf  install_agents.sh  restart_agents.sh  stop_agents.sh
.doctrees/: _data_sources.doctree  _hsi_events.doctree  aims.doctree  authors.doctree  azure_batch.doctree  background.doctree  contributing.doctree  contributors.doctree  data_sources.doctree  environment.pickle  getting_started.doctree  hsi_events.doctree  ibm_course.doctree  index.doctree  installation.doctree  learning.doctree  parameters.doctree  publications.doctree  readme.doctree  usage.doctree  videos.doctree  welcome.doctree  writeups.doctree
.wills-stuff/: appt_cleanup_experiments.py  beddays_playground.py  bisect-for-appt-discrepency.sh  compare-post-to-pre.md  foo.py  loop_over_time_and_pop_size.py  pandas-things.py  parsing_cprofile.py  run-and-repeat.py  short-scale-run.sh  threaded-sim-tests.py
_modules/: index.html
_sources/: _data_sources.rst.txt  _hsi_events.rst.txt  aims.rst.txt  contributing.rst.txt  hsi_events.rst.txt  index.rst.txt  installation.rst.txt  parameters.rst.txt
_static/: documentation_options.js
case-studies/: index.html
deploy/: .gitignore  Dockerfile  deploy.sh  id_ed25519.pub  known_hosts  requirements.txt  submit_batch.py
docs/: _contributors_list.html  _data_sources.rst  _publications_list.html  about.rst  aim.rst  aims.rst  authors.rst  azure_batch.rst  background.rst  conf.py  contributing.rst  contributors.rst  data_collection.rst  data_sources.csv  data_sources.rst  getting_started.rst  hsi_events.csv  hsi_events.rst  ibm_course.rst  index.rst  inspector.py  installation.rst  learning.rst  publication_policy.txt  publications.bib  publications.rst  requirements.txt  sphinx_debug.py  tlo_contributors.py  tlo_data_sources.py  tlo_hsi_events.py  tlo_methods_rst.py  tlo_parameters.py  tlo_publications.py  tlo_resources.py  usage.rst  videos.rst  welcome.rst  writeups.rst
notebooks/: Demo.ipynb
outputs/: .gitignore  README  cons_available_0x.xlsx  cons_available_1.xlsx  cons_available_3.xlsx  dalys_1x.xlsx  dalys_2.xlsx  dalys_3x.xlsx  dalys_4x.xlsx  dalys_baseline.xlsx  dalys_nocxr.xlsx  dalys_noxpert.xlsx  dalys_outreach.xlsx  dalys_scaleup.xlsx  default_run0.pickle  default_run0x.pickle  default_run1x.pickle  default_run2x.pickle  mortality_0.xlsx  mortality_1x.xlsx  mortality_2.xlsx  mortality_3x.xlsx  mortality_4x.xlsx  new_TB_cases_0x.xlsx  new_TB_cases_1.xlsx  new_TB_cases_1x.xlsx  new_TB_cases_3x.xlsx  new_TB_cases_4x.xlsx
profiling/: README.md  __init__.py  _paths.py  profile.py  scale_run.py
reference/: index.html  modules.html  tlo.analysis.hsi_events.html  tlo.analysis.html  tlo.analysis.life_expectancy.html  tlo.analysis.performance.html  tlo.analysis.utils.html  tlo.cli.html  tlo.core.html  tlo.dependencies.html  tlo.docs.html  tlo.events.html  tlo.html  tlo.lm.html  tlo.lm_play.html  tlo.logging.core.html  tlo.logging.encoding.html  tlo.logging.helpers.html  tlo.logging.html  tlo.logging.reader.html  tlo.methods.alri.html  tlo.methods.bed_days.html  tlo.methods.bladder_cancer.html  tlo.methods.breast_cancer.html  tlo.methods.cancer_consumables.html  tlo.methods.cardio_metabolic_disorders.html  tlo.methods.care_of_women_during_pregnancy.html  tlo.methods.causes.html  tlo.methods.cervical_cancer.html  tlo.methods.chronicsyndrome.html  tlo.methods.consumables.html  tlo.methods.contraception.html  tlo.methods.copd.html  tlo.methods.demography.html  tlo.methods.depression.html  tlo.methods.diarrhoea.html  tlo.methods.dx_algorithm_adult.html  tlo.methods.dx_algorithm_child.html  tlo.methods.dxmanager.html  tlo.methods.enhanced_lifestyle.html  (+49 more)
requirements/: Makefile  base-in.yml  base.in  base.txt  dev-in.yml  dev.in  dev.txt  docs-in.yml  macos-py3.8-base.txt  macos-py3.8-dev.txt
resources/: .ResourceFile_Consumables.csv.un~.html  0D49AC10  22519A30  319EAF30  4548A5D0  49830C10  62008620  DAC9AC10  Method_Depression.xlsx  Method_Epilepsy.xlsx  Method_HIV.xlsx  Method_HT.xlsx  Method_Lifestyle_Enhanced.xlsx  Method_Oesophageal_Cancer.xlsx  Method_TB.xlsx  Oesophageal cancer - Description - Mar 20.docx  RTI_emulator.pkl  ResourceFile_ALRI.xlsx  ResourceFile_ALRI2.xlsx  ResourceFile_ASFR_WPP.csv  ResourceFile_AbortionAndMiscarriage.xlsx  ResourceFile_AbortionAndMiscarriage.xlsx.html  ResourceFile_Alri.xlsx  ResourceFile_Alri.xlsx.html  ResourceFile_AntenatalCare.xlsx  ResourceFile_AntenatalCare.xlsx.html  ResourceFile_ApptType_By_FacLevel.csv  ResourceFile_Appt_Time_Table.csv  ResourceFile_Appt_Types_Table.csv  ResourceFile_Bed_Capacity.csv  ResourceFile_Births_2018Census.csv  ResourceFile_Bladder_Cancer.xlsx  ResourceFile_Bladder_Cancer.xlsx.html  ResourceFile_Breast_Cancer.xlsx  ResourceFile_Breast_Cancer.xlsx.html  ResourceFile_Cervical_Cancer.xlsx  ResourceFile_Childhood_Diarrhoea.xlsx  ResourceFile_Childhood_Pneumonia.xlsx  ResourceFile_Childhood_Pneumonia.xlsx.html  ResourceFile_Consumables.csv  (+185 more)
src/: genanalysis.py
tests/: andrew_temp2_test.py  andrew_temp_test.py  breast_cancer_analyses_logging.py  check_workforce_capability_against_appt_time_requirement.py  conftest.py  error_dump.txt  loggernaires.py  mock_disease.py  probability_premature_death_demog.py  rms_testing_lm.py  test_ALRI.py  test_CVD.py  test_HTMscaleup.py  test_NCD.py  (+126 more)
(+3998 files in other folders)
